--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://ikoala2010.com/"
+baseurl = "https://ikoala2015.github.io/"
 title = "考拉i探寻"
 theme = "hugo-theme-cleanwhite"
 languageCode = "zh-cn"
